--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Panda Commerce</title>
+    <title>Panda Commerce By Bootstrap</title>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
+    <header class="container">
         <!-- navbar section start -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
@@ -37,7 +37,108 @@
             </div>
           </nav>
         <!-- navbar section end -->
+
+        <!-- top banner carousel slider start -->
+        <section class="my-5">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center ps-5">
+                            <div>
+                                <h2>Cool Dude Headphone
+                                </h2>
+                                <p>This is the best headphone in the world for people who just want to waste time in front of funky world.
+                                </p>
+                                <h2>$420</h2>
+                                <div class="btn btn-warning">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center ps-5">
+                            <div>
+                                <h2>Mega LCD TV For Sports
+                                </h2>
+                                <p>This is the best tv in the world for people who just want to waste time in front of tv.
+                                </p>
+                                <h2>$1200</h2>
+                                <div class="btn btn-warning">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center ps-5">
+                            <div>
+                                <h2>X-Box for your living room</h2>
+                                <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.
+                                </p>
+                                <h2>$600</h2>
+                                <div class="btn btn-warning">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+        <!-- top banner carousel slider end -->
     </header>
+
+    <main>
+        <!-- categories start -->
+        <section>
+            <div class="container my-5 text-center">
+                <div class="row g-2">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-3 bg-warning d-flex align-items-center justify-content-around">
+                            <h2 class="text-white">Watch</h2>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-3 bg-primary d-flex align-items-center justify-content-around">
+                            <h2 class="text-white">Bag</h2>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-3 bg-info d-flex align-items-center justify-content-around">
+                            <h2 class="text-white">Shoes</h2>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- categories end -->
+    </main>
     
 
     <script src="bootstrap/bootstrap.min.js"></script>
