--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
                       <div class="card border-0 shadow-lg h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Supply 350</h5>
+                          <h3 class="card-title">Supply 350</h3>
+                          <h5>$120</h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
@@ -159,7 +160,8 @@
                       <div class="card border-0 shadow-lg h-100">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Nike 360</h5>
+                          <h3 class="card-title">Nike 360</h3>
+                          <h5>$320</h5>
                           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
@@ -172,7 +174,8 @@
                       <div class="card border-0 shadow-lg h-100">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Red Airmax</h5>
+                          <h3 class="card-title">Red Airmax</h3>
+                          <h5>$350</h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
@@ -183,6 +186,55 @@
                   </div>
             </section>
         <!-- Shoes categories end -->
+
+        <!-- Backpack section start -->
+            <section class="container my-5">
+                <h2>Backpack</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h3 class="card-title">Red Laltu Bag</h3>
+                          <h5>$120</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="m-3">
+                          <div class="btn btn-warning">Buy Now >></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Blue Niltu Bag</h3>
+                            <h5>$320</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="m-3">
+                          <div class="btn btn-warning">
+                            Buy Now >></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Black Kaltu Bag</h3>
+                            <h5>$1690</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="m-3">
+                          <div class="btn btn-warning">Buy Now >></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+        <!-- Backpack section end -->
+
     </main>
     
 
