--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="container">
         <!-- navbar section start -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
               <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li> 
                 </ul>
               </div>
@@ -47,7 +47,7 @@
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active border rounded bg-info p-5">
+                  <div class="carousel-item active border rounded panda-bg p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex align-items-center ps-5">
                             <div>
@@ -56,7 +56,7 @@
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.
                                 </p>
                                 <h2>$420</h2>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <div class="btn panda-btn">Buy Now</div>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item active border rounded bg-info p-5">
+                  <div class="carousel-item active border rounded panda-bg p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex align-items-center ps-5">
                             <div>
@@ -73,7 +73,7 @@
                                 <p>This is the best tv in the world for people who just want to waste time in front of tv.
                                 </p>
                                 <h2>$1200</h2>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <div class="btn panda-btn">Buy Now</div>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="carousel-item active border rounded bg-info p-5">
+                  <div class="carousel-item active border rounded panda-bg p-5">
                     <div class="row">
                         <div class="col-lg-7 d-flex align-items-center ps-5">
                             <div>
@@ -89,7 +89,7 @@
                                 <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.
                                 </p>
                                 <h2>$600</h2>
-                                <div class="btn btn-warning">Buy Now</div>
+                                <div class="btn panda-btn">Buy Now</div>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-3 bg-info d-flex align-items-center justify-content-around">
+                        <div class="p-3 border rounded-3 panda-bg d-flex align-items-center justify-content-around">
                             <h2 class="text-white">Shoes</h2>
                             <img src="images/categories/shoes.png" alt="">
                         </div>
@@ -140,7 +140,7 @@
         <!-- categories end -->
 
         <!-- Shoes categories start -->
-            <section class="container my-5">
+            <section id="shoes" class="container my-5">
                 <h2>Shoes</h2>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
@@ -152,7 +152,7 @@
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
-                          <div class="btn btn-warning">Buy Now >></div>
+                          <div class="btn panda-btn">Buy Now >></div>
                         </div>
                       </div>
                     </div>
@@ -165,7 +165,7 @@
                           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
-                          <div class="btn btn-warning">
+                          <div class="btn panda-btn">
                             Buy Now >></div>
                         </div>
                       </div>
@@ -179,7 +179,7 @@
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
-                          <div class="btn btn-warning">Buy Now >></div>
+                          <div class="btn panda-btn">Buy Now >></div>
                         </div>
                       </div>
                     </div>
@@ -188,7 +188,7 @@
         <!-- Shoes categories end -->
 
         <!-- Backpack section start -->
-            <section class="container my-5">
+            <section id="backpack" class="container my-5">
                 <h2>Backpack</h2>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
@@ -200,7 +200,7 @@
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
-                          <div class="btn btn-warning">Buy Now >></div>
+                          <div class="btn panda-btn">Buy Now >></div>
                         </div>
                       </div>
                     </div>
@@ -213,7 +213,7 @@
                           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
-                          <div class="btn btn-warning">
+                          <div class="btn panda-btn">
                             Buy Now >></div>
                         </div>
                       </div>
@@ -227,7 +227,7 @@
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="m-3">
-                          <div class="btn btn-warning">Buy Now >></div>
+                          <div class="btn panda-btn">Buy Now >></div>
                         </div>
                       </div>
                     </div>
@@ -235,7 +235,27 @@
             </section>
         <!-- Backpack section end -->
 
+        <!-- Subscribe section start -->
+        <section id="subscribe" class="container panda-bg d-flex justify-content-center p-5 rounded-3">
+            <div class="">
+                <h2 class="">LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p> 
+                <form action="">
+                    <div>
+                        <input type="email" name="" id="">
+                    </div>
+                    <div class="mt-3">
+                        <input class="btn panda-btn" type="submit" value="Submit">
+                    </div>
+                </form> 
+            </div>
+        </section>
+        <!-- Subscribe section end -->
     </main>
+
+    <footer class="mt-5 text-center">
+        <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
     
 
     <script src="bootstrap/bootstrap.min.js"></script>
